* split up gruntfile * sass integration * tidy up

--- a/demo/index.html
+++ b/demo/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
     <title>jQuery pgallery</title>
-    <script src="../node_modules/jquery/dist/jquery.min.js"></script>
+    <script src="../bower_components/jquery/dist/jquery.min.js"></script>
     <script src="../src/jquery.pgallery.js"></script>
-    <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="../dist/css/main.css" />
 </head>
 <body>
 <h2>Gallery pins</h2>
